[package]
name = "piston-test"
version = "0.1.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

[dependencies]
piston = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
piston2d-sprite = "*"

pistoncore-sdl2_window = "*"
# switch to glutin_window when relative mouse motion,
#   window focus, and window restart work